--- a/index.html
+++ b/index.html
@@ -73,6 +73,36 @@
                     </div>
                 </div>
 
+                <div class="course-container">
+                    <h1 class="course-container-name">Computer Networks</h1>
+                    <div class="grade-container">
+                        <h2 class="grade-container-head">Grade</h2>
+                        <select name="grade" id="grade">
+                            <option value="O">O</option>
+                            <option value="APlus">A+</option>
+                            <option value="A">A</option>
+                            <option value="BPlus">B+</option>
+                            <option value="B">B</option>
+                            <option value="C">C</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="course-container">
+                    <h1 class="course-container-name">Computer Networks</h1>
+                    <div class="grade-container">
+                        <h2 class="grade-container-head">Grade</h2>
+                        <select name="grade" id="grade">
+                            <option value="O">O</option>
+                            <option value="APlus">A+</option>
+                            <option value="A">A</option>
+                            <option value="BPlus">B+</option>
+                            <option value="B">B</option>
+                            <option value="C">C</option>
+                        </select>
+                    </div>
+                </div>
+
             </div>
 
             
