--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
 
                 <div class="course-container">
-                    <h1 class="course-container-name">Computer Networks</h1>
+                    <h1 class="course-container-name">Algorithms</h1>
                     <div class="grade-container">
                         <h2 class="grade-container-head">Grade</h2>
                         <select name="grade" id="grade">
@@ -44,7 +44,7 @@
                 </div>
 
                 <div class="course-container">
-                    <h1 class="course-container-name">Computer Networks</h1>
+                    <h1 class="course-container-name">Operating Systems</h1>
                     <div class="grade-container">
                         <h2 class="grade-container-head">Grade</h2>
                         <select name="grade" id="grade">
@@ -59,7 +59,7 @@
                 </div>
 
                 <div class="course-container">
-                    <h1 class="course-container-name">Computer Networks</h1>
+                    <h1 class="course-container-name">Theory of Computations</h1>
                     <div class="grade-container">
                         <h2 class="grade-container-head">Grade</h2>
                         <select name="grade" id="grade">
@@ -74,7 +74,7 @@
                 </div>
 
                 <div class="course-container">
-                    <h1 class="course-container-name">Computer Networks</h1>
+                    <h1 class="course-container-name">Database Management System</h1>
                     <div class="grade-container">
                         <h2 class="grade-container-head">Grade</h2>
                         <select name="grade" id="grade">
@@ -89,7 +89,7 @@
                 </div>
 
                 <div class="course-container">
-                    <h1 class="course-container-name">Computer Networks</h1>
+                    <h1 class="course-container-name">Enviroinmental Science and Sustainability</h1>
                     <div class="grade-container">
                         <h2 class="grade-container-head">Grade</h2>
                         <select name="grade" id="grade">
