--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="bg-container">
 
         <div class="gpa-container">
-            <h1 class="bg-container-head">GPA CALCULATOR</h1>
+            <h1 class="bg-container-head">GPA CALCULATOR - 5th Sem</h1>
             <div class="calculator-container">
 
                 <div class="course-container">
